fixed more alignment issues
Made divs for all the images, so they would align correctly.
Updated css styles

--- a/style.css
+++ b/style.css
@@ -37,22 +37,21 @@ main img {
 /* ---  Groups & Items --- */
 
 .group {
-  width: 70%;
   display: flex;
   flex-direction: column;
-  text-align: start;
-}
-
-.group img {
-  width: 100%;
 }
 
 .item {
   flex: 1;
-  margin: 10px;
+  margin: 2%;
+}
+
+.item > img {
+  width: 100%;
 }
 
 .item-double {
+  padding: 1%;
   flex: 2;
 }
 
@@ -93,6 +92,11 @@ header nav ul li a:hover {
 }
 
 /* -------  Search Form ------- */
+.form-group {
+  display: flex;
+  flex: 1;
+}
+
 form {
   border: 2px solid #ff385c;
   padding: 1%;
@@ -149,7 +153,7 @@ footer p {
     line-height: 1.4;
   }
 
-  form{
+  form {
     flex-direction: row;
     justify-content: space-between;
   }
@@ -161,6 +165,10 @@ footer p {
   .form-group {
     flex-direction: column;
     min-width: 0;
+  }
+
+  .group {
+    flex-direction: row;
   }
 
   .idea {
